# example-cpp-gui-license-validation

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: main.cpp  main_widget.cpp  main_widget.h
